nobase_dist_doc_DATA=\
	SLUDGEDevKitHelp/About_the_SLUDGE_Compiler.html \
	SLUDGEDevKitHelp/getObjectX_and_getObjectY.html \
	SLUDGEDevKitHelp/playSound.html \
	SLUDGEDevKitHelp/setSceneDimensions.html \
	SLUDGEDevKitHelp/About_the_SLUDGE_Floor_Maker.html \
	SLUDGEDevKitHelp/getOverObject.html \
	SLUDGEDevKitHelp/popFromStack.html \
	SLUDGEDevKitHelp/setSoundLoopPoints.html \
	SLUDGEDevKitHelp/About_the_SLUDGE_Project_Manager.html \
	SLUDGEDevKitHelp/getPixelColour_\(getPixelColor\).html \
	SLUDGEDevKitHelp/positionStatus.html \
	SLUDGEDevKitHelp/setSoundVolume.html \
	SLUDGEDevKitHelp/About_the_SLUDGE_Sprite_Bank_Editor.html \
	SLUDGEDevKitHelp/getSoundCache.html \
	SLUDGEDevKitHelp/Problems_with_+=,_-=,__=,__=_and_%=_in_SLUDGE.html \
	SLUDGEDevKitHelp/setSpeechMode.html \
	SLUDGEDevKitHelp/About_the_SLUDGE_Translation_Editor.html \
	SLUDGEDevKitHelp/getStatusText.html \
	SLUDGEDevKitHelp/Project_Manager__Menus.html \
	SLUDGEDevKitHelp/setSpeechSpeed.html \
	SLUDGEDevKitHelp/About_the_SLUDGE_Z-Buffer_Maker.html \
	SLUDGEDevKitHelp/hardScroll.html \
	SLUDGEDevKitHelp/Project_Manager___quot\;Files_in_this_project_quot\;_Section.html \
	SLUDGEDevKitHelp/setStatusColour_\(setStatusColor\).html \
	SLUDGEDevKitHelp/addCharacter.html \
	SLUDGEDevKitHelp/hasFlag.html \
	SLUDGEDevKitHelp/Project_Manager___quot\;Project_management_quot\;_Section.html \
	SLUDGEDevKitHelp/setThumbnailSize.html \
	SLUDGEDevKitHelp/addOverlay.html \
	SLUDGEDevKitHelp/hideCharacter.html \
	SLUDGEDevKitHelp/Project_Manager___quot\;Project_properties_quot\;_Dialog.html \
	SLUDGEDevKitHelp/Setting_Default_Events.html \
	SLUDGEDevKitHelp/addScreenRegion.html \
	SLUDGEDevKitHelp/howFrozen.html \
	SLUDGEDevKitHelp/Project_Manager___quot\;Project_settings_quot\;_Section.html \
	SLUDGEDevKitHelp/setZBuffer.html \
	SLUDGEDevKitHelp/addStatus.html \
	SLUDGEDevKitHelp/pushToStack.html \
	SLUDGEDevKitHelp/showBoxes.html \
	SLUDGEDevKitHelp/aimCamera.html \
	SLUDGEDevKitHelp/ini.html \
	SLUDGEDevKitHelp/quitGame.html \
	SLUDGEDevKitHelp/showCharacter.html \
	SLUDGEDevKitHelp/alignStatus.html \
	SLUDGEDevKitHelp/Introduction_to_SLUDGE_Concepts.html \
	SLUDGEDevKitHelp/quitWithFatalError.html \
	SLUDGEDevKitHelp/showFloor.html \
	SLUDGEDevKitHelp/Alphabetical_List_of_Built-in_Functions.html \
	SLUDGEDevKitHelp/isCharacter.html \
	SLUDGEDevKitHelp/random.html \
	SLUDGEDevKitHelp/showThumbnail.html \
	SLUDGEDevKitHelp/animate.html \
	SLUDGEDevKitHelp/isMoving.html \
	SLUDGEDevKitHelp/registryGetString.html \
	SLUDGEDevKitHelp/skipSpeech.html \
	SLUDGEDevKitHelp/anim.html \
	SLUDGEDevKitHelp/isScreenRegion.html \
	SLUDGEDevKitHelp/removeAllCharacters.html \
	SLUDGEDevKitHelp/blankArea.html \
	SLUDGEDevKitHelp/jumpCharacter.html \
	SLUDGEDevKitHelp/removeAllScreenRegions.html \
	SLUDGEDevKitHelp/blankScreen.html \
	SLUDGEDevKitHelp/launch_and_launchWith.html \
	SLUDGEDevKitHelp/removeCharacter.html \
	SLUDGEDevKitHelp/SLUDGE_Language_Reference_Manual.html \
	SLUDGEDevKitHelp/bodgeFilenames.html \
	SLUDGEDevKitHelp/lightStatus.html \
	SLUDGEDevKitHelp/removeLastStatus.html \
	SLUDGEDevKitHelp/Sludge.png \
	SLUDGEDevKitHelp/Built-in_Constants.html \
	SLUDGEDevKitHelp/loadCustomData_and_saveCustomData.html \
	SLUDGEDevKitHelp/removeScreenRegion.html \
	SLUDGEDevKitHelp/snapshotClear.html \
	SLUDGEDevKitHelp/cacheSound.html \
	SLUDGEDevKitHelp/loadGame.html \
	SLUDGEDevKitHelp/renameFile.html \
	SLUDGEDevKitHelp/snapshotGrab.html \
	SLUDGEDevKitHelp/callEvent.html \
	SLUDGEDevKitHelp/Loops_and_Conditionals.html \
	SLUDGEDevKitHelp/rename.html \
	SLUDGEDevKitHelp/somethingSpeaking.html \
	SLUDGEDevKitHelp/cancelSub.html \
	SLUDGEDevKitHelp/loopSound.html \
	SLUDGEDevKitHelp/Reusing_Code_for_or_from_Events.html \
	SLUDGEDevKitHelp/spawnSub.html \
	SLUDGEDevKitHelp/captureAllKeys.html \
	SLUDGEDevKitHelp/Member_Variables_and_Member_Functions.html \
	SLUDGEDevKitHelp/saveGame.html \
	SLUDGEDevKitHelp/Spellchecking_the_Strings_in_your_Game.html \
	SLUDGEDevKitHelp/clearStatus.html \
	SLUDGEDevKitHelp/mixOverlay.html \
	SLUDGEDevKitHelp/say_and_think.html \
	SLUDGEDevKitHelp/stackSize.html \
	SLUDGEDevKitHelp/completeTimers.html \
	SLUDGEDevKitHelp/moveCharacter.html \
	SLUDGEDevKitHelp/Scrolling_Scenes.html \
	SLUDGEDevKitHelp/startMusic.html \
	SLUDGEDevKitHelp/Copyright.html \
	SLUDGEDevKitHelp/movieAbort.html \
	SLUDGEDevKitHelp/setBackgroundEffect.html \
	SLUDGEDevKitHelp/statusText.html \
	SLUDGEDevKitHelp/copyStack.html \
	SLUDGEDevKitHelp/moviePlaying.html \
	SLUDGEDevKitHelp/setBlankColour_\(setBlankColor\).html \
	SLUDGEDevKitHelp/stopCharacter.html \
	SLUDGEDevKitHelp/costume.html \
	SLUDGEDevKitHelp/movieStart.html \
	SLUDGEDevKitHelp/setBurnColour_\(setBurnColor\).html \
	SLUDGEDevKitHelp/stopMusic.html \
	SLUDGEDevKitHelp/darkBackground.html \
	SLUDGEDevKitHelp/Multiple_Languages_in_a_Single_Game.html \
	SLUDGEDevKitHelp/setCharacterAngleOffset.html \
	SLUDGEDevKitHelp/stopSound.html \
	SLUDGEDevKitHelp/deleteFile.html \
	SLUDGEDevKitHelp/newStack.html \
	SLUDGEDevKitHelp/setCharacterAntiAliasing.html \
	SLUDGEDevKitHelp/stringLength.html \
	SLUDGEDevKitHelp/deleteFromStack_and_deleteAllFromStack.html \
	SLUDGEDevKitHelp/normalCharacter.html \
	SLUDGEDevKitHelp/setCharacterColourise.html \
	SLUDGEDevKitHelp/stringWidth.html \
	SLUDGEDevKitHelp/dequeue.html \
	SLUDGEDevKitHelp/Object_Types_and_Events.html \
	SLUDGEDevKitHelp/setCharacterDrawMode.html \
	SLUDGEDevKitHelp/substring.html \
	SLUDGEDevKitHelp/Download_Free_SLUDGE_Examples.html \
	SLUDGEDevKitHelp/Object_Types_as_Characters.html \
	SLUDGEDevKitHelp/setCharacterExtra.html \
	SLUDGEDevKitHelp/The_Background_Image.html \
	SLUDGEDevKitHelp/enqueue.html \
	SLUDGEDevKitHelp/Object_Types_as_Screen_Regions.html \
	SLUDGEDevKitHelp/setCharacterSpinSpeed.html \
	SLUDGEDevKitHelp/The_Multi-Purpose_Stack___Array___Queue_Type.html \
	SLUDGEDevKitHelp/fetchEvent.html \
	SLUDGEDevKitHelp/onFocusChange.html \
	SLUDGEDevKitHelp/setCharacterTransparency.html \
	SLUDGEDevKitHelp/The_Programs.html \
	SLUDGEDevKitHelp/fileExists.html \
	SLUDGEDevKitHelp/onKeyboard.html \
	SLUDGEDevKitHelp/setCharacterWalkSpeed.html \
	SLUDGEDevKitHelp/File_Formats_Used_by_SLUDGE.html \
	SLUDGEDevKitHelp/onLeftMouse.html \
	SLUDGEDevKitHelp/setCostume.html \
	SLUDGEDevKitHelp/transitionMode_and_transitionLevel.html \
	SLUDGEDevKitHelp/File_Handling.html \
	SLUDGEDevKitHelp/onLeftMouseUp.html \
	SLUDGEDevKitHelp/setCursor.html \
	SLUDGEDevKitHelp/Treating_Variables_as_Booleans.html \
	SLUDGEDevKitHelp/floatCharacter.html \
	SLUDGEDevKitHelp/onMoveMouse.html \
	SLUDGEDevKitHelp/setCustomEncoding.html \
	SLUDGEDevKitHelp/Treating_Variables_as_Strings.html \
	SLUDGEDevKitHelp/forceCharacter.html \
	SLUDGEDevKitHelp/onRightMouse.html \
	SLUDGEDevKitHelp/setDefaultMusicVolume.html \
	SLUDGEDevKitHelp/turnCharacter_and_spinCharacter.html \
	SLUDGEDevKitHelp/freeSound.html \
	SLUDGEDevKitHelp/onRightMouseUp.html \
	SLUDGEDevKitHelp/setDefaultSoundVolume.html \
	SLUDGEDevKitHelp/Unfreezable_Functions.html \
	SLUDGEDevKitHelp/freeze.html \
	SLUDGEDevKitHelp/Overview__Creating_a_Game.html \
	SLUDGEDevKitHelp/setFloor.html \
	SLUDGEDevKitHelp/unfreeze.html \
	SLUDGEDevKitHelp/Functions_\(subs\).html \
	SLUDGEDevKitHelp/parallaxAdd.html \
	SLUDGEDevKitHelp/setFont.html \
	SLUDGEDevKitHelp/updateDisplay.html \
	SLUDGEDevKitHelp/getCharacterDirection.html \
	SLUDGEDevKitHelp/parallaxClear.html \
	SLUDGEDevKitHelp/setFontSpacing.html \
	SLUDGEDevKitHelp/Using_Audio_in_SLUDGE.html \
	SLUDGEDevKitHelp/getCharacterScale.html \
	SLUDGEDevKitHelp/Passing_Functions_as_Variables.html \
	SLUDGEDevKitHelp/setLightMap.html \
	SLUDGEDevKitHelp/Using_Constants_in_SLUDGE.html \
	SLUDGEDevKitHelp/getFramesPerSecond.html \
	SLUDGEDevKitHelp/pasteCharacter.html \
	SLUDGEDevKitHelp/setLitStatusColour_\(setLitStatusColor\).html \
	SLUDGEDevKitHelp/Variable_Operations.html \
	SLUDGEDevKitHelp/getLanguageID.html \
	SLUDGEDevKitHelp/pasteImage.html \
	SLUDGEDevKitHelp/setMaximumAntiAliasing.html \
	SLUDGEDevKitHelp/Variables.html \
	SLUDGEDevKitHelp/getMatchingFiles.html \
	SLUDGEDevKitHelp/pasteString_and_burnString.html \
	SLUDGEDevKitHelp/setMusicVolume.html \
	SLUDGEDevKitHelp/wait.html \
	SLUDGEDevKitHelp/getMouseScreenX_and_getMouseScreenY.html \
	SLUDGEDevKitHelp/pause.html \
	SLUDGEDevKitHelp/setPasteColour_\(setPasteColor\).html \
	SLUDGEDevKitHelp/zoomCamera.html \
	SLUDGEDevKitHelp/getMouseX_and_getMouseY.html \
	SLUDGEDevKitHelp/pickOne.html \
	SLUDGEDevKitHelp/setScale.html \
	SLUDGEDevKitHelp/The_Worlds_Easiest_Load_Save_Mechanism.html \
	SLUDGEDevKitHelp/SLUDGE_Dev_Kit_Help.html \
	SLUDGEDevKitHelp/images/aa-0.jpg \
	SLUDGEDevKitHelp/images/aa-20.jpg \
	SLUDGEDevKitHelp/images/aa-4.jpg \
	SLUDGEDevKitHelp/images/aa-off.jpg \
	SLUDGEDevKitHelp/images/image001.gif \
	SLUDGEDevKitHelp/images/image002.gif \
	SLUDGEDevKitHelp/images/image003.gif \
	SLUDGEDevKitHelp/images/image004.gif \
	SLUDGEDevKitHelp/images/image005.gif \
	SLUDGEDevKitHelp/images/sbank_hotspot.gif \
	SLUDGEDevKitHelp/images/sludgepale.gif \
	ExampleProjects/Welcome/image.tga ExampleProjects/Welcome/script.slu \
	ExampleProjects/Welcome/tada.wav ExampleProjects/Welcome/Welcome.slp \
	ExampleProjects/VerbCoin/demofont.duc ExampleProjects/VerbCoin/init.slu \
	ExampleProjects/VerbCoin/VerbCoin.slp \
	ExampleProjects/VerbCoin/ego/alien.duc ExampleProjects/VerbCoin/ego/ego.slu \
	ExampleProjects/VerbCoin/iface/arrow_icons.slu \
	ExampleProjects/VerbCoin/iface/coin_interface.slu \
	ExampleProjects/VerbCoin/iface/invback.tga \
	ExampleProjects/VerbCoin/iface/inventory.slu \
	ExampleProjects/VerbCoin/iface/keyboard.slu \
	ExampleProjects/VerbCoin/iface/mouse.duc \
	ExampleProjects/VerbCoin/iface/mushroom.duc \
	ExampleProjects/VerbCoin/iface/pop.wav \
	ExampleProjects/VerbCoin/iface/stop_and_go.slu \
	ExampleProjects/VerbCoin/iface/talk.slu \
	ExampleProjects/VerbCoin/iface/verbcoin.tga \
	ExampleProjects/VerbCoin/iface/verbs.slu \
	ExampleProjects/VerbCoin/inside/music.mod \
	ExampleProjects/VerbCoin/inside/room.flo \
	ExampleProjects/VerbCoin/inside/room.slu \
	ExampleProjects/VerbCoin/inside/room.tga \
	ExampleProjects/VerbCoin/inside/room.zbu \
	ExampleProjects/VerbCoin/outside/duck.duc \
	ExampleProjects/VerbCoin/outside/music.mod \
	ExampleProjects/VerbCoin/outside/room.flo \
	ExampleProjects/VerbCoin/outside/room.slu \
	ExampleProjects/VerbCoin/outside/room.tga \
	ExampleProjects/VerbCoin/outside/room.zbu
