EXTRA_DIST = \
	sludge-floormaker.desktop \
	sludge-projectmanager.desktop \
	sludge-spritebankeditor.desktop \
	sludge-translationeditor.desktop \
	sludge-zbuffermaker.desktop \
	sludge.lang \
	icons/hicolor/128x128/apps/sludge-floormaker.png \
	icons/hicolor/128x128/apps/sludge-projectmanager.png \
	icons/hicolor/128x128/apps/sludge-spritebankeditor.png \
	icons/hicolor/128x128/apps/sludge-translationeditor.png \
	icons/hicolor/128x128/apps/sludge-zbuffermaker.png \
	icons/hicolor/128x128/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/128x128/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-project.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-script.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-translation.png \
	icons/hicolor/16x16/apps/sludge-floormaker.png \
	icons/hicolor/16x16/apps/sludge-projectmanager.png \
	icons/hicolor/16x16/apps/sludge-spritebankeditor.png \
	icons/hicolor/16x16/apps/sludge-translationeditor.png \
	icons/hicolor/16x16/apps/sludge-zbuffermaker.png \
	icons/hicolor/16x16/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/16x16/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-project.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-script.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-translation.png \
	icons/hicolor/32x32/apps/sludge-floormaker.png \
	icons/hicolor/32x32/apps/sludge-projectmanager.png \
	icons/hicolor/32x32/apps/sludge-spritebankeditor.png \
	icons/hicolor/32x32/apps/sludge-translationeditor.png \
	icons/hicolor/32x32/apps/sludge-zbuffermaker.png \
	icons/hicolor/32x32/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/32x32/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-project.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-script.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-translation.png \
	icons/hicolor/48x48/apps/sludge-floormaker.png \
	icons/hicolor/48x48/apps/sludge-projectmanager.png \
	icons/hicolor/48x48/apps/sludge-spritebankeditor.png \
	icons/hicolor/48x48/apps/sludge-translationeditor.png \
	icons/hicolor/48x48/apps/sludge-zbuffermaker.png \
	icons/hicolor/48x48/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/48x48/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-project.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-script.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-translation.png

applicationsdir = $(datadir)/applications

applications_DATA = \
	sludge-floormaker.desktop \
	sludge-projectmanager.desktop \
	sludge-spritebankeditor.desktop \
	sludge-translationeditor.desktop \
	sludge-zbuffermaker.desktop

gtksourceviewspecsdir = $(datadir)/gtksourceview-2.0/language-specs

gtksourceviewspecs_DATA = sludge.lang

nobase_data_DATA = \
	icons/hicolor/128x128/apps/sludge-floormaker.png \
	icons/hicolor/128x128/apps/sludge-projectmanager.png \
	icons/hicolor/128x128/apps/sludge-spritebankeditor.png \
	icons/hicolor/128x128/apps/sludge-translationeditor.png \
	icons/hicolor/128x128/apps/sludge-zbuffermaker.png \
	icons/hicolor/128x128/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/128x128/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-project.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-script.png \
	icons/hicolor/128x128/mimetypes/text-x-sludge-translation.png \
	icons/hicolor/16x16/apps/sludge-floormaker.png \
	icons/hicolor/16x16/apps/sludge-projectmanager.png \
	icons/hicolor/16x16/apps/sludge-spritebankeditor.png \
	icons/hicolor/16x16/apps/sludge-translationeditor.png \
	icons/hicolor/16x16/apps/sludge-zbuffermaker.png \
	icons/hicolor/16x16/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/16x16/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-project.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-script.png \
	icons/hicolor/16x16/mimetypes/text-x-sludge-translation.png \
	icons/hicolor/32x32/apps/sludge-floormaker.png \
	icons/hicolor/32x32/apps/sludge-projectmanager.png \
	icons/hicolor/32x32/apps/sludge-spritebankeditor.png \
	icons/hicolor/32x32/apps/sludge-translationeditor.png \
	icons/hicolor/32x32/apps/sludge-zbuffermaker.png \
	icons/hicolor/32x32/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/32x32/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-project.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-script.png \
	icons/hicolor/32x32/mimetypes/text-x-sludge-translation.png \
	icons/hicolor/48x48/apps/sludge-floormaker.png \
	icons/hicolor/48x48/apps/sludge-projectmanager.png \
	icons/hicolor/48x48/apps/sludge-spritebankeditor.png \
	icons/hicolor/48x48/apps/sludge-translationeditor.png \
	icons/hicolor/48x48/apps/sludge-zbuffermaker.png \
	icons/hicolor/48x48/mimetypes/application-x-sludge-spritebank.png \
	icons/hicolor/48x48/mimetypes/application-x-sludge-zbuffer.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-floor.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-project.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-script.png \
	icons/hicolor/48x48/mimetypes/text-x-sludge-translation.png
