EXTRA_DIST = \
	sludge-floormaker.desktop \
	sludge-projectmanager.desktop \
	sludge-spritebankeditor.desktop \
	sludge-translationeditor.desktop \
	sludge-zbuffermaker.desktop \
	sludge.lang \
	128x128/apps/sludge-floormaker.png \
	128x128/apps/sludge-projectmanager.png \
	128x128/apps/sludge-spritebankeditor.png \
	128x128/apps/sludge-translationeditor.png \
	128x128/apps/sludge-zbuffermaker.png \
	128x128/mimetypes/application-x-sludge-compressedimage.png \
	128x128/mimetypes/application-x-sludge-spritebank.png \
	128x128/mimetypes/application-x-sludge-zbuffer.png \
	128x128/mimetypes/text-x-sludge-floor.png \
	128x128/mimetypes/text-x-sludge-project.png \
	128x128/mimetypes/text-x-sludge-script.png \
	128x128/mimetypes/text-x-sludge-translation.png \
	16x16/apps/sludge-floormaker.png \
	16x16/apps/sludge-projectmanager.png \
	16x16/apps/sludge-spritebankeditor.png \
	16x16/apps/sludge-translationeditor.png \
	16x16/apps/sludge-zbuffermaker.png \
	16x16/mimetypes/application-x-sludge-compressedimage.png \
	16x16/mimetypes/application-x-sludge-spritebank.png \
	16x16/mimetypes/application-x-sludge-zbuffer.png \
	16x16/mimetypes/text-x-sludge-floor.png \
	16x16/mimetypes/text-x-sludge-project.png \
	16x16/mimetypes/text-x-sludge-script.png \
	16x16/mimetypes/text-x-sludge-translation.png \
	32x32/apps/sludge-floormaker.png \
	32x32/apps/sludge-projectmanager.png \
	32x32/apps/sludge-spritebankeditor.png \
	32x32/apps/sludge-translationeditor.png \
	32x32/apps/sludge-zbuffermaker.png \
	32x32/mimetypes/application-x-sludge-compressedimage.png \
	32x32/mimetypes/application-x-sludge-spritebank.png \
	32x32/mimetypes/application-x-sludge-zbuffer.png \
	32x32/mimetypes/text-x-sludge-floor.png \
	32x32/mimetypes/text-x-sludge-project.png \
	32x32/mimetypes/text-x-sludge-script.png \
	32x32/mimetypes/text-x-sludge-translation.png \
	48x48/apps/sludge-floormaker.png \
	48x48/apps/sludge-projectmanager.png \
	48x48/apps/sludge-spritebankeditor.png \
	48x48/apps/sludge-translationeditor.png \
	48x48/apps/sludge-zbuffermaker.png \
	48x48/mimetypes/application-x-sludge-compressedimage.png \
	48x48/mimetypes/application-x-sludge-spritebank.png \
	48x48/mimetypes/application-x-sludge-zbuffer.png \
	48x48/mimetypes/text-x-sludge-floor.png \
	48x48/mimetypes/text-x-sludge-project.png \
	48x48/mimetypes/text-x-sludge-script.png \
	48x48/mimetypes/text-x-sludge-translation.png

applicationsdir = $(datadir)/applications

applications_DATA = \
	sludge-floormaker.desktop \
	sludge-projectmanager.desktop \
	sludge-spritebankeditor.desktop \
	sludge-translationeditor.desktop \
	sludge-zbuffermaker.desktop

gtksourceviewspecsdir = $(datadir)/gtksourceview-2.0/language-specs

gtksourceviewspecs_DATA = sludge.lang

gtksourceview3specsdir = $(datadir)/gtksourceview-3.0/language-specs

gtksourceview3specs_DATA = sludge.lang

iconsdir = $(datadir)/icons/hicolor

nobase_icons_DATA = \
	128x128/apps/sludge-floormaker.png \
	128x128/apps/sludge-projectmanager.png \
	128x128/apps/sludge-spritebankeditor.png \
	128x128/apps/sludge-translationeditor.png \
	128x128/apps/sludge-zbuffermaker.png \
	128x128/mimetypes/application-x-sludge-compressedimage.png \
	128x128/mimetypes/application-x-sludge-spritebank.png \
	128x128/mimetypes/application-x-sludge-zbuffer.png \
	128x128/mimetypes/text-x-sludge-floor.png \
	128x128/mimetypes/text-x-sludge-project.png \
	128x128/mimetypes/text-x-sludge-script.png \
	128x128/mimetypes/text-x-sludge-translation.png \
	16x16/apps/sludge-floormaker.png \
	16x16/apps/sludge-projectmanager.png \
	16x16/apps/sludge-spritebankeditor.png \
	16x16/apps/sludge-translationeditor.png \
	16x16/apps/sludge-zbuffermaker.png \
	16x16/mimetypes/application-x-sludge-compressedimage.png \
	16x16/mimetypes/application-x-sludge-spritebank.png \
	16x16/mimetypes/application-x-sludge-zbuffer.png \
	16x16/mimetypes/text-x-sludge-floor.png \
	16x16/mimetypes/text-x-sludge-project.png \
	16x16/mimetypes/text-x-sludge-script.png \
	16x16/mimetypes/text-x-sludge-translation.png \
	32x32/apps/sludge-floormaker.png \
	32x32/apps/sludge-projectmanager.png \
	32x32/apps/sludge-spritebankeditor.png \
	32x32/apps/sludge-translationeditor.png \
	32x32/apps/sludge-zbuffermaker.png \
	32x32/mimetypes/application-x-sludge-compressedimage.png \
	32x32/mimetypes/application-x-sludge-spritebank.png \
	32x32/mimetypes/application-x-sludge-zbuffer.png \
	32x32/mimetypes/text-x-sludge-floor.png \
	32x32/mimetypes/text-x-sludge-project.png \
	32x32/mimetypes/text-x-sludge-script.png \
	32x32/mimetypes/text-x-sludge-translation.png \
	48x48/apps/sludge-floormaker.png \
	48x48/apps/sludge-projectmanager.png \
	48x48/apps/sludge-spritebankeditor.png \
	48x48/apps/sludge-translationeditor.png \
	48x48/apps/sludge-zbuffermaker.png \
	48x48/mimetypes/application-x-sludge-compressedimage.png \
	48x48/mimetypes/application-x-sludge-spritebank.png \
	48x48/mimetypes/application-x-sludge-zbuffer.png \
	48x48/mimetypes/text-x-sludge-floor.png \
	48x48/mimetypes/text-x-sludge-project.png \
	48x48/mimetypes/text-x-sludge-script.png \
	48x48/mimetypes/text-x-sludge-translation.png
